estrutura html5 básica

--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>olá mundo</h1>
+
+    <ul>
+        <li>
+            <a href="index.html"> HOME </a>
+        </li>
+        <li>
+            <a href="contato.html">CONTATO</a>
+        </li>
+    </ul>
+
+    <h1>About me</h1>
+
+    <p>
+        is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic 
+        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset 
+        sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker 
+        including versions of Lorem Ipsum.
+    </p>
+
+    <img src="r2-d2-main_f315b094.jpeg" alt="foto">
+
+    <h2>epic sax guy</h2>
+
+    <iframe
+    width="560" 
+    height="315" 
+    src="https://www.youtube.com/embed/cBT2Oew5MLs?si=_m_FZwHnddnsZcPe" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" 
+    allowfullscreen>
+    </iframe>
+
+
+
 </body>
 </html>
